Refs #91562; Add country name tooltip for the homepage countries map; fix z-index problem in header

--- a/eea/climateadapt/theme/climateadaptv2/src/less/mainmenu.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/mainmenu.less
@@ -11,7 +11,7 @@
     display: -moz-box;
     display: flex;
     position: relative;
-    z-index: 10;
+    // z-index: 10;
     background-color: @primary-blue;
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.4);
 
