--- a/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/topmenu.less
@@ -20,7 +20,7 @@
   background-color: rgba(255, 255, 255, 0.9);
   height: 65px;
   position: relative;
-  // z-index: 9999;
+  z-index: 99;
 }
 
 .top-menu .fa-bars {
